Prevent h2 and h3 docs styles from bleeding onto the components

--- a/docs/scss/_docs-main-content.scss
+++ b/docs/scss/_docs-main-content.scss
@@ -19,11 +19,11 @@
         margin: 10px 0px 10px 0;
     }
 
-    h2{
+    &>h2{
         @extend .docs-header-h2;
     }
 
-    h3{
+    &>h3{
         @extend .docs-header-h3;
     }
     
